--- a/01-Object Oriented Programming.ipynb
+++ b/01-Object Oriented Programming.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -72,6 +72,7 @@
     }
    ],
    "source": [
+    "#this code to count the list\n",
     "lst.count(2)"
    ]
   },
