--- a/01-Object Oriented Programming.ipynb
+++ b/01-Object Oriented Programming.ipynb
@@ -38,12 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "#this is list\n",
     "lst = [1,2,3]"
    ]
   },
