--- a/01-Object Oriented Programming.ipynb
+++ b/01-Object Oriented Programming.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -102,6 +102,8 @@
     }
    ],
    "source": [
+    "#printing the objects\n",
+    "\n",
     "print(type(1))\n",
     "print(type([]))\n",
     "print(type(()))\n",
