adding the comment sto file 2

--- a/02-Object Oriented Programming Homework.ipynb
+++ b/02-Object Oriented Programming Homework.ipynb
@@ -24,12 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "#making this a class line\n",
     "class Line:\n",
     "    \n",
     "    def __init__(self,coor1,coor2):\n",
