--- a/02-Object Oriented Programming Homework.ipynb
+++ b/02-Object Oriented Programming Homework.ipynb
@@ -30,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "#creating class\n",
+    "#creating class in the files 2\n",
     "class Line:\n",
     "    \n",
     "    def __init__(self,coor1,coor2):\n",
